--- a/composer.json
+++ b/composer.json
@@ -17,14 +17,16 @@
         "swagger"
     ],
     "license": "MIT",
-    "authors": [{
-        "name": "Mitul Golakiya",
-        "email": "me@mitul.me"
-    }],
+    "authors": [
+        {
+            "name": "Mitul Golakiya",
+            "email": "me@mitul.me"
+        }
+    ],
     "require": {
         "php": "^8.1.0",
-        "illuminate/support": "^10.0",
-        "illuminate/console": "^10.0",
+        "illuminate/support": "^10.0|^11.0",
+        "illuminate/console": "^10.0|^11.0",
         "laracasts/flash": "^3.2.2",
         "laravelcollective/html": "^6.4",
         "symfony/var-exporter": "^6.2.5"
@@ -56,10 +58,12 @@
             ]
         }
     },
-    "funding": [{
-        "type": "opencollective",
-        "url": "https://opencollective.com/infyomlabs"
-    }],
+    "funding": [
+        {
+            "type": "opencollective",
+            "url": "https://opencollective.com/infyomlabs"
+        }
+    ],
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
