--- a/composer.json
+++ b/composer.json
@@ -25,19 +25,25 @@
     ],
     "require": {
         "php": "^8.1.0",
-        "illuminate/support": "^10.0|^11.0",
-        "illuminate/console": "^10.0|^11.0",
+        "illuminate/support": "^11.0",
+        "illuminate/console": "^11.0",
         "laracasts/flash": "^3.2.2",
-        "laravelcollective/html": "^6.4",
+        "laravelcollective/html": "6.x-dev",
         "symfony/var-exporter": "^6.2.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.0.7",
+        "phpunit/phpunit": "^11.4.3",
         "mockery/mockery": "^1.5.1",
-        "orchestra/testbench": "^8.0.0",
-        "pestphp/pest": "2.x-dev",
-        "pestphp/pest-plugin-laravel": "2.x-dev"
+        "orchestra/testbench": "^9.5.2",
+        "pestphp/pest": "3.x-dev",
+        "pestphp/pest-plugin-laravel": "3.x-dev"
     },
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/cooldeark/html"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "YusufTogtay\\Generator\\": "src/"
